--- a/app/src/main/res/layout/wallet_add_money_visa.xml
+++ b/app/src/main/res/layout/wallet_add_money_visa.xml
@@ -279,8 +279,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Amount"
-                    android:textSize="16sp"
-                    android:fontFamily="@font/josefin_sans" />
+                    android:textSize="16sp"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
