--- a/app/src/main/res/layout/buy_inputs_address.xml
+++ b/app/src/main/res/layout/buy_inputs_address.xml
@@ -40,12 +40,12 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-<!--            <androidx.fragment.app.FragmentContainerView-->
-<!--                android:id="@+id/map"-->
-<!--                class="com.google.android.gms.maps.SupportMapFragment"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:layout_marginTop="120dp"/>-->
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/map"
+                class="com.google.android.gms.maps.SupportMapFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="120dp"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
