--- a/app/src/main/res/layout/buy_inputs_order_details.xml
+++ b/app/src/main/res/layout/buy_inputs_order_details.xml
@@ -64,6 +64,7 @@
                         android:orientation="vertical"
                         android:padding="5dp">
 
+
                         <RelativeLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -85,7 +86,7 @@
                                 android:layout_alignParentEnd="true"
                                 android:gravity="end"
                                 android:maxLines="1"
-                                android:text="@string/no_of_products"
+                                android:text="@string/none"
                                 android:textAlignment="textEnd"
                                 android:textColor="@color/textColorSecondary"
                                 android:textSize="14sp"
@@ -112,7 +113,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:maxLines="1"
-                                android:text="UGX00.0"
+                                android:text="@string/none"
                                 android:textSize="14sp"
                                 android:textColor="@color/textColorSecondary"
                                 android:textAlignment="textEnd"
@@ -200,7 +201,7 @@
                                 android:layout_alignParentEnd="true"
                                 android:gravity="end"
                                 android:maxLines="1"
-                                android:text="@string/order_date"
+                                android:text="@string/none"
                                 android:textAlignment="textEnd"
                                 android:textColor="@color/textColorSecondary"
                                 android:textSize="14sp"
@@ -231,6 +232,7 @@
                                 android:layout_alignParentEnd="true"
                                 android:gravity="end"
                                 android:maxLines="1"
+                                android:text="@string/none"
                                 android:textAlignment="textEnd"
                                 android:textColor="@color/textColorSecondary"
                                 android:textSize="14sp"
