--- a/app/src/main/res/layout/online_order_detail_item.xml
+++ b/app/src/main/res/layout/online_order_detail_item.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="8"
         android:padding="5dp"
-        android:text="2 x Weed Master"
+        android:text="@string/none"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="18dp" />
 
